// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`level-indicator Level one renders as expected 1`] = `
<div
  className="flex-parent flex-parent--center-cross"
>
  <div
    className="inline-block w6 bg-green align-middle mr3"
    style={
      Object {
        "borderRadius": "1px",
        "height": "8px",
      }
    }
  />
  <div
    className="inline-block w6 bg-gray-light align-middle mr3"
    style={
      Object {
        "borderRadius": "1px",
        "height": "8px",
      }
    }
  />
  <div
    className="inline-block w6 bg-gray-light align-middle mr3"
    style={
      Object {
        "borderRadius": "1px",
        "height": "8px",
      }
    }
  />
  <div
    className="inline-block color-green ml3 txt-capitalize"
  >
    beginner
  </div>
</div>
`;

exports[`level-indicator Level three renders as expected 1`] = `
<div
  className="flex-parent flex-parent--center-cross"
>
  <div
    className="inline-block w6 bg-red align-middle mr3"
    style={
      Object {
        "borderRadius": "1px",
        "height": "8px",
      }
    }
  />
  <div
    className="inline-block w6 bg-red align-middle mr3"
    style={
      Object {
        "borderRadius": "1px",
        "height": "8px",
      }
    }
  />
  <div
    className="inline-block w6 bg-red align-middle mr3"
    style={
      Object {
        "borderRadius": "1px",
        "height": "8px",
      }
    }
  />
  <div
    className="inline-block color-red ml3 txt-capitalize"
  >
    advanced
  </div>
</div>
`;

exports[`level-indicator Level two renders as expected 1`] = `
<div
  className="flex-parent flex-parent--center-cross"
>
  <div
    className="inline-block w6 bg-orange align-middle mr3"
    style={
      Object {
        "borderRadius": "1px",
        "height": "8px",
      }
    }
  />
  <div
    className="inline-block w6 bg-orange align-middle mr3"
    style={
      Object {
        "borderRadius": "1px",
        "height": "8px",
      }
    }
  />
  <div
    className="inline-block w6 bg-gray-light align-middle mr3"
    style={
      Object {
        "borderRadius": "1px",
        "height": "8px",
      }
    }
  />
  <div
    className="inline-block color-orange ml3 txt-capitalize"
  >
    intermediate
  </div>
</div>
`;
